Добавил шаблон письма

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3'
 
 networks:
+  proxy:
   backend:
-    driver: bridge
 
 services:
   db:
@@ -11,10 +11,29 @@ services:
     profiles: [ "main", "init" ]
     networks:
       - backend
+    ports:
+      - 5432:5432
     volumes:
       - postgres_volume:/var/lib/postgresql/data/
     env_file:
       - ./services/postgres/.env
 
+  admin:
+    build: ./admin
+    profiles: [ "main", "start" ]
+    networks:
+      - proxy
+      - backend
+    ports:
+      - 8000:8000
+    volumes:
+      - ./admin:/usr/src/admin/
+      - static_volume:/usr/src/admin/static
+    env_file:
+      - ./admin/.env
+    depends_on:
+      - db
+
 volumes:
   postgres_volume:
+  static_volume:
