--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     profiles: ["main", "init"]
     networks:
       - backend
+    ports:
+      - 5432:5432
     volumes:
       - postgres_volume:/var/lib/postgresql/data/
     env_file:
