Собрал проект в одно целое, соеденил etl и publisher

--- a/actions_api/env.sample
+++ b/actions_api/env.sample
@@ -4,7 +4,7 @@ DB_PORT=5432
 DB_NAME=movies
 DB_USER=postgres
 DB_PASSWORD=password
-SECRET_KEY=ggTTEsxXFFSSSsFFFXX
+SECRET_KEY=http://113eaa9cd7c543e08284bd5630476ddd@127.0.0.1:9000/3
 FLASK_ENV=Production
 APP_HOST=0.0.0.0
 APP_PORT=8000
