--- a/events_etl/env.sample
+++ b/events_etl/env.sample
@@ -1,9 +1,9 @@
-DB_HOST=localhost
+DB_HOST=db
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=password
 DB_NAME=movies
 
-PUBLISHER_HOST=localhost
+PUBLISHER_HOST=publisher
 PUBLISHER_PORT=8000
-PUBLISHER_INTERFACE=/api/v1/events
+PUBLISHER_INTERFACE=/api/v1/broker/events
