Правки в env/ publisher сделал вызов функий

--- a/admin/env.sample
+++ b/admin/env.sample
@@ -10,6 +10,6 @@ DB_NAME=movies
 DB_SCHEME=events,users
 DB_USER=postgres
 DB_PASSWORD=password
-DB_HOST=localhost
+DB_HOST=db
 DB_PORT=5432
-DATABASE=postgres
+DATABASE=movies
