--- a/consumer/env.sample
+++ b/consumer/env.sample
@@ -8,4 +8,4 @@ RABBIT_ROUTING=welcome
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
 SMTP_USER=test@gmail.com
-SMTP_PASSWORD=1111111111111
+SMTP_PASSWORD=1234567
